--- a/25-09-2024.md
+++ b/25-09-2024.md
@@ -1,11 +1,11 @@
 # 9月25日(水)
 
 こんにちは！これは私の日記です。
-昨日私はひどい日を有った。私の仕事仲間（しごとなかま）はとても大切フィアテルを損なって（そこなって）から。
-これは私のフェアチル、私たちは全世界（ぜんせかい）にフィアチルをプロデュースしって、人々トランスレーションを見ませんでした。
+昨日私はひどい日をありました。私の仕事仲間（しごとなかま）はとても大切フィアテルを損なって（そこなって）から。
+これは私のフェアチル、私たちは全世界（ぜんせかい）にフィアチルをプロデュースしって、人々はトランスレーションを見ませんでした。
 私ははらがたって。
 私も仕事仲間もレストランで晩ご飯を食べに行きました。
-今日は簡単な日です。簡単なタスクが有りって、新しい（あたらしい）仕事仲間が有りって！リマソルで住む　（すむ）。
+今日は簡単な日です。簡単なタスクが有りって、新しい（あたらしい）仕事仲間が有りって！リマソルに住んでいます（すむ）。
 
 <sub><sup>Hello there! there is my dairy. 
 Yesterday i had a discussting woking day, because my coworker miss very important feature. 
